--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "api-node",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
     "start": "server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
