--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "20"
   },
   "scripts": {
-    "start": "server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
